//(C) Copyright [2020] Hewlett Packard Enterprise Development LP
//
//Licensed under the Apache License, Version 2.0 (the "License"); you may
//not use this file except in compliance with the License. You may obtain
//a copy of the License at
//
//    http:#www.apache.org/licenses/LICENSE-2.0
//
//Unless required by applicable law or agreed to in writing, software
//distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
//WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
//License for the specific language governing permissions and limitations
// under the License

syntax = "proto3";

service Systems {
 rpc GetSystemsCollection(GetSystemsRequest) returns (SystemsResponse){}
 rpc GetSystemResource(GetSystemsRequest) returns (SystemsResponse){}
 rpc GetSystems(GetSystemsRequest) returns (SystemsResponse) {}
 rpc ComputerSystemReset(ComputerSystemResetRequest) returns (SystemsResponse) {}
 rpc SetDefaultBootOrder(DefaultBootOrderRequest) returns (SystemsResponse) {}
 rpc ChangeBiosSettings(BiosSettingsRequest) returns (SystemsResponse) {}
 rpc ChangeBootOrderSettings(BootOrderSettingsRequest) returns (SystemsResponse) {}
 rpc CreateVolume(VolumeRequest) returns (SystemsResponse) {}
 rpc DeleteVolume(VolumeRequest) returns (SystemsResponse) {}
}

message GetSystemsRequest{
    string sessionToken=1;
    string requestParam=2;
    string URL=3;
    string resourceID=4;
}

message SystemsResponse{
    int32 statusCode = 1;
    string statusMessage = 2;
    map<string,string> header=3;
    bytes body = 4;
}

message ComputerSystemResetRequest{
    string sessionToken=1;
    string SystemID=2;
    bytes RequestBody=3;
}
message DefaultBootOrderRequest{
    string sessionToken=1;
    string SystemID=2;
}

message BiosSettingsRequest{
    string SessionToken = 1;
    string SystemID = 2;
    bytes RequestBody = 3;
}

message BootOrderSettingsRequest{
    string SessionToken = 1;
    string SystemID = 2;
    bytes RequestBody = 3;
}

message VolumeRequest{
    string SessionToken = 1;
    string SystemID = 2;
    string StorageInstance = 3;
    string VolumeID = 4;
    bytes RequestBody = 5;   
}